[feat] Create handler for updating product
